Fixed lots of stuff, backup

--- a/html/verhuur.html
+++ b/html/verhuur.html
@@ -26,7 +26,8 @@
 </nav>
 
 <main>
-    <aside class="vFilter limited">
+
+    <section class="vFilter limited">
         <label for="sFilterSlpk">Filters:</label>
         <select name="slpkFilter" id="sFilterSlpk">
             <option value="Geen slaapkamers">Geen slaapkamers</option>
@@ -51,24 +52,23 @@
             <option selected value="Jaar">Jaar</option>
         </select>
 
-        <a href="verhuurfiltered.html">
-            <button id="vFilterBtn">Zoek
-            </button>
+        <a href="verkoopfiltered.html">
+            <button id="vFilterBtn">Zoek</button>
         </a>
-    </aside>
+    </section>
 
     <article class="limited">
         <section class="vBlock">
-            <a href="garagebox1.html">
-                <img class="vImg" src="../images/Verhuur/thumbnails/garagebox1.jpg"
+            <a href="vhgaragebox1.html">
+                <img class="vImg" src="../images/verhuur/thumbnails/garagebox1.jpg"
                      alt="Foto van vier garageboxen op een rij" width="205" height="140">
                 <h2>Garagebox</h2>
                 <p>&euro; 40</p>
             </a>
         </section>
         <section class="vBlock">
-            <a href="garagebox2.html">
-                <img class="vImg" src="../images/Verhuur/thumbnails/garagebox2.jpg"
+            <a href="vhgaragebox2.html">
+                <img class="vImg" src="../images/verhuur/thumbnails/garagebox2.jpg"
                      alt="Foto van een rij garageboxen" width="205"
                      height="140">
                 <h2>Garagebox</h2>
@@ -77,8 +77,8 @@
         </section>
 
         <section class="vBlock">
-            <a href="appartement.html">
-                <img class="vImg" src="../images/Verhuur/thumbnails/appartement4.jpg" alt="Foto van een appartement"
+            <a href="vhappartement.html">
+                <img class="vImg" src="../images/verhuur/thumbnails/appartement4.jpg" alt="Foto van een appartement"
                      width="205"
                      height="140">
                 <h2>Appartement</h2>
@@ -87,7 +87,7 @@
         </section>
         <section class="vBlock">
             <a href="#">
-                <img class="vImg" src="../images/Verhuur/thumbnails/appartement.jpg" alt="Foto van een appartement"
+                <img class="vImg" src="../images/verhuur/thumbnails/appartement.jpg" alt="Foto van een appartement"
                      width="205"
                      height="140">
                 <h2>Appartement</h2>
@@ -96,7 +96,7 @@
         </section>
         <section class="vBlock">
             <a href="#">
-                <img class="vImg" src="../images/Verhuur/thumbnails/appartement3.png"
+                <img class="vImg" src="../images/verhuur/thumbnails/appartement3.png"
                      alt="Foto van een appartement"
                      width="205"
                      height="140">
@@ -106,7 +106,7 @@
         </section>
         <section class="vBlock">
             <a href="#">
-                <img class="vImg" src="../images/Verhuur/thumbnails/appartement2.png"
+                <img class="vImg" src="../images/verhuur/thumbnails/appartement2.png"
                      alt="Foto van een appartement"
                      width="205"
                      height="140">
@@ -116,7 +116,7 @@
         </section>
         <section class="vBlock">
             <a href="#">
-                <img class="vImg" src="../images/Verhuur/thumbnails/appartement1.png"
+                <img class="vImg" src="../images/verhuur/thumbnails/appartement1.png"
                      alt="Foto van een appartement" width="205"
                      height="140">
                 <h2>Appartement</h2>
@@ -125,7 +125,7 @@
         </section>
         <section class="vBlock">
             <a href="#">
-                <img class="vImg" src="../images/Verhuur/thumbnails/huis4.png"
+                <img class="vImg" src="../images/verhuur/thumbnails/huis4.png"
                      alt="Foto van een ingesloten huis" width="205"
                      height="140">
                 <h2>Huis</h2>
@@ -134,7 +134,7 @@
         </section>
         <section class="vBlock">
             <a href="#">
-                <img class="vImg" src="../images/Verhuur/thumbnails/huis3.jpg"
+                <img class="vImg" src="../images/verhuur/thumbnails/huis3.jpg"
                      alt="Foto van een vrijstaand huis met garage"
                      width="205"
                      height="140">
@@ -144,7 +144,7 @@
         </section>
         <section class="vBlock">
             <a href="#">
-                <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa"
+                <img class="vImg" src="../images/verhuur/thumbnails/villa1.JPG" alt="Foto van een villa"
                      width="205"
                      height="140">
                 <h2>Villa</h2>
