--- a/html/verkoop.html
+++ b/html/verkoop.html
@@ -2,11 +2,11 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Verkoop</title>
     <link rel="stylesheet" href="../css/basis.css">
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../css/verkoopverhuur.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 </nav>
 <main>
 
-    <section class="vFilter limited">
+    <section class="vFilter limited" id="navTest">
         <label for="sTypeV">Filters:</label>
         <select name="sTypeV" id="sTypeV">
             <option value="Nieuw">Nieuw</option>
@@ -54,7 +54,7 @@
 
     <article class="limited">
         <section class="vBlock">
-            <a href="#">
+            <a href="vkappartement1.html">
                 <img class="vImg" src="../images/verkoop/fullsize/appartement21.jpg" alt="Foto van een villa" width="205"
                      height="140">
                 <h2>Appartement</h2>
@@ -62,7 +62,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="#">
+            <a href="vkappartement2.html">
                 <img class="vImg" src="../images/verkoop/fullsize/appartement22.jpg" alt="Foto van een villa" width="205"
                      height="140">
                 <h2>Appartement</h2>
@@ -70,7 +70,7 @@
             </a>
         </section>
         <section class="vBlock">
-            <a href="#">
+            <a href="vkappartement3.html">
                 <img class="vImg" src="../images/verkoop/fullsize/appartement23.jpg" alt="Foto van een villa" width="205"
                      height="140">
                 <h2>Appartement</h2>
@@ -118,10 +118,12 @@
             <p>&euro; 465.000</p>
         </section>
         <section class="vBlock">
-            <img class="vImg" src="../images/verkoop/fullsize/huis25.jpg" alt="Foto van een villa" width="205"
-                 height="140">
-            <h2>Huis</h2>
-            <p>&euro; 475.000</p>
+            <a href="#">
+                <img class="vImg" src="../images/verkoop/fullsize/huis25.jpg" alt="Foto van een villa" width="205"
+                     height="140">
+                <h2>Huis</h2>
+                <p>&euro; 475.000</p>
+            </a>
         </section>
         <section class="vBlock">
             <a href="#">
