--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
             </nav>
             <nav class="kolom33">
                 <h2>Openingsuren</h2>
-                <p>Maandag: gesloten</p>
-                <p>Dinsdag - Vrijdag: 9 - 16u</p>
-                <p>Zaterdag: 8 - 18u</p>
-                <p>Zondag: Gesloten</p>
+                <ul>
+                    <li>Maandag: gesloten</li>
+                    <li>Dinsdag - Vrijdag: 9 - 16u</li>
+                    <li>Zaterdag: 8 - 18u</li>
+                    <li>Zondag: Gesloten</li>
+                </ul>
             </nav>
         </section>
     </aside>
